--- a/src/styles/Nav.css
+++ b/src/styles/Nav.css
@@ -2,7 +2,8 @@
     --main-text: rgb(63, 63, 63);
     --main-background: rgb(184, 184, 184);
 }
-.navbar{
+
+.nav-menu{
     position: fixed;
     height:6vh;
     width: 100%;
@@ -25,7 +26,7 @@
     background-color: var(--main-background);
     
 }
-.home-btn{
+#navbarSupportedContent a{
     padding-left: 20px;
     font-family: "Allerta Stencil";
     font-size: 18px;
