--- a/src/styles/projectItem.css
+++ b/src/styles/projectItem.css
@@ -1,41 +1,23 @@
-.imagecard{
-    float: left;
-    padding-top: 20px ;
-    padding-left: 50px;
-    padding-bottom: 20px;
+/* .example2 {
+ height: 50px;	
+ overflow: hidden;
+ position: relative;
 }
-.card-background{
-    background-color: rgb(223, 220, 215);
+.example2 h3 {
+ position: absolute;
+ width: 100%;
+ height: 100%;
+ margin: 0;
+ line-height: 50px;
+ text-align: left;
+	
+ animation: example2 10s ease-out;
 }
-
-.display-box h5{
-    text-align: center;
-    font-size: 35px
-}
-
-.display-box p{
-    padding-left: 550px;
-}
-
-.button-group{
-    float: right;
-    padding-top: 60px;
-    
-}
-
-.githhub-logo{
-    margin-right: 40px;
-    border-radius:10px; 
-    background-color: var(--main-background);
-    color:var(--main-text);
-}
-
-.deployment-btn{
-    background-color: var(--main-background);
-    width: 5px;
-    font-size: 15px;
-    border-radius:10px; 
-    font-family:"Allerta Stencil" ;
-    color:var(--main-text);
-    
-}
+@keyframes example2 {
+ 0%   { 
+ transform: translateX(200%); 		
+ }
+ 100% { 
+ transform: translateX(0%); 
+ }
+} */
