--- a/src/styles/aboutme.css
+++ b/src/styles/aboutme.css
@@ -1,13 +1,5 @@
-/* .type-effect {
-  width: 100%;
-  height: 100%;
-} */
-
-.typing1,
-.typing2,
-.typing3,
-.typing4,
-.typing5 {
+.typing1
+{
   white-space: nowrap; /* keep text in one line */
   overflow: hidden; /* hide text behind the cursor */
   margin: 0.5rem auto;
@@ -16,40 +8,9 @@
 .typing1 {
   /* border-right: 2px solid rgba(17, 17, 17, 0.9); */
   /* define animation types for text + cursor */
-  animation: animated-text__1 3s steps(30, end) 1s 1 normal both,
+  animation: animated-text__1 3s steps(30, end) 0.5s 1 normal both,
     animated-cursor__1 900ms steps(30, end) 8;
 }
-
-.typing2 {
-  /* border-right: 2px solid rgba(17, 17, 17, 0.9); */
-
-  /* define animation types for text + cursor */
-  animation: animated-text__2 3s steps(30, end) 1s 1 normal both,
-    animated-cursor__2 900ms steps(30, end) infinite;
-  -webkit-animation-delay: 4s;
-  animation-delay: 4s;
-}
-
-.typing3 {
-    /* border-right: 2px solid rgba(17, 17, 17, 0.9); */
-  
-    /* define animation types for text + cursor */
-    animation: animated-text__3 3s steps(30, end) 1s 1 normal both,
-      animated-cursor__3 900ms steps(30, end) infinite;
-    -webkit-animation-delay: 7s;
-    animation-delay: 7s;
-  }
-
-
-  .typing4 {
-    /* border-right: 2px solid rgba(17, 17, 17, 0.9); */
-  
-    /* define animation types for text + cursor */
-    animation: animated-text__3 3s steps(30, end) 1s 1 normal both,
-      animated-cursor__3 900ms steps(30, end) infinite;
-    -webkit-animation-delay: 10s;
-    animation-delay: 10s;
-  }
 
 
 @keyframes animated-cursor__1 {
@@ -61,27 +22,6 @@
   }
 }
 
-
-@keyframes animated-cursor__1 {
-    from {
-      border-right-color: rgb(0, 0, 0);
-    }
-    to {
-      border-right-color: rgb(255, 255, 255);
-    }
-  }
-  
-
-
-
-@keyframes animated-cursor__1 {
-from {
-    border-right-color: rgb(0, 0, 0);
-}
-to {
-    border-right-color: rgb(255, 255, 255);
-}
-}
   
   
 @keyframes animated-text__1 {
@@ -89,24 +29,21 @@ to {
     width: 0;
   }
   to {
-    width: 62rem;
+    width: 100%;
   }
 }
 
-@keyframes animated-text__2 {
-  from {
-    width: 0;
-  }
-  to {
-    width: 75rem;
-  }
+.about-me{
+  animation: fadeIn 5s;
+  opacity: 0;
+  animation-delay: 1.5s;
+  animation-fill-mode: forwards;
 }
 
-@keyframes animated-text__3 {
-    from {
-      width: 0;
-    }
-    to {
-      width: 70rem;
-    }
+
+@keyframes fadeIn {
+  0% { opacity: 0; }
+  100% { 
+      opacity: 1;
   }
+}
