--- a/src/styles/aboutme.css
+++ b/src/styles/aboutme.css
@@ -33,17 +33,321 @@
   }
 }
 
-.about-me{
-  animation: fadeIn 5s;
-  opacity: 0;
-  animation-delay: 1.5s;
-  animation-fill-mode: forwards;
+
+
+.circles{
+  z-index: -99;
+  background-color: rgb(0, 0, 0);
+  position: absolute;
+  top: 0;
+  left: 0;
+  overflow: hidden;
+
+}
+
+.circles li{
+  position: absolute;
+  display: block;
+  list-style: none;
+  /* animation: animate 15s linear infinite; */
+  bottom: -150px;
+  
+}
+
+ .circles li:nth-child(1){
+  left: 25%;
+  width: 80px;
+  height: 80px;
+  animation-delay: 0s;
+  animation: animate 33s linear infinite;
 }
 
 
-@keyframes fadeIn {
-  0% { opacity: 0; }
-  100% { 
+.circles li:nth-child(2){
+  left: 10%;
+  width: 20px;
+  height: 20px;
+  animation-delay: 2s;
+  animation-duration: 12s;
+  animation: animate 31s linear infinite;
+}
+
+.circles li:nth-child(3){
+  left: 70%;
+  width: 20px;
+  height: 20px;
+  animation: animate 25s linear infinite;
+}
+
+.circles li:nth-child(4){
+  left: 40%;
+  width: 60px;
+  height: 60px;
+  animation-delay: 0s;
+  animation: animate 35s linear infinite;
+}
+
+.circles li:nth-child(5){
+  left: 65%;
+  width: 20px;
+  height: 20px;
+  animation-delay: 0s;
+  animation: animate 8s linear infinite;
+}
+
+.circles li:nth-child(6){
+  left: 75%;
+  width: 110px;
+  height: 110px;
+  animation-delay: 3s;
+  animation: animate 19s linear infinite;
+}
+
+.circles li:nth-child(7){
+  left: 35%;
+  width: 150px;
+  height: 150px;
+  animation-delay: 7s;
+  animation: animate 23s linear infinite;
+}
+
+.circles li:nth-child(8){
+  left: 50%;
+  width: 25px;
+  height: 25px;
+  animation-delay: 15s;
+  animation: animate 45s linear infinite;
+}
+
+.circles li:nth-child(9){
+  left: 20%;
+  width: 15px;
+  height: 15px;
+  animation-delay: 2s;
+  animation: animate 15s linear infinite;
+}
+
+.circles li:nth-child(10){
+  left: 85%;
+  width: 150px;
+  height: 150px;
+  animation-delay: 0s;
+  animation: animate 35s linear infinite;
+}
+
+.circles li:nth-child(11){
+  left: 5%;
+  width: 40px;
+  height: 40px;
+  animation-delay: 0s;
+  animation: animate 55s linear infinite;
+}
+
+
+.circles li:nth-child(12){
+  left: 15%;
+  width: 20px;
+  height: 20px;
+  animation-delay: 4s;
+  animation: animate 85s linear infinite;
+  
+}
+
+.circles li:nth-child(13){
+  left: 75%;
+  width: 20px;
+  height: 20px;
+  animation-delay: 7s;
+  animation: animate 13s linear infinite;
+}
+
+.circles li:nth-child(14){
+  left: 55%;
+  width: 40px;
+  height: 40px;
+  animation-delay: 3s;
+  animation: animate 17s linear infinite;
+}
+
+.circles li:nth-child(15){
+  left: 60%;
+  width: 20px;
+  height: 20px;
+  animation-delay: 0s;
+  animation: animate 25s linear infinite;
+}
+
+.circles li:nth-child(16){
+  left: 90%;
+  width: 110px;
+  height: 110px;
+  animation-delay: 10s;
+  animation: animate 35s linear infinite;
+}
+
+.circles li:nth-child(17){
+  left: 42%;
+  width: 150px;
+  height: 150px;
+  animation-delay: 7s;
+  animation: animate 75s linear infinite;
+}
+
+.circles li:nth-child(18){
+  left: 15%;
+  width: 25px;
+  height: 25px;
+  animation-delay: 1s;
+  animation: animate 22s linear infinite;
+}
+
+.circles li:nth-child(19){
+  left: 28%;
+  width: 15px;
+  height: 15px;
+  animation-delay: 4s;
+  animation: animate 19s linear infinite;
+  
+}
+
+.circles li:nth-child(20){
+  left: 5%;
+  width: 150px;
+  height: 150px;
+  animation-delay: 2s;
+  animation: animate 20s linear infinite;
+}
+
+
+
+@keyframes animate {
+
+  0%{
+      transform: translateY(0) rotate(0deg);
       opacity: 1;
   }
+
+  100%{
+      transform: translateY(-1000px) rotate(200deg);
+      opacity: 0.1;
+  }
+
+} 
+
+/* 
+
+.circles{
+  z-index: -99;
+  background-color: rgb(0, 0, 0);
+  position: absolute;
+  top: 0;
+  left: 0;
+  overflow: hidden;
+
 }
+
+.circles li{
+  position: absolute;
+  display: block;
+  list-style: none;
+  width: 20px;
+  height: 20px;
+  background: rgba(196, 196, 196, 0.425);
+  animation: animate 10s linear infinite;
+  bottom: -150px;
+  
+}
+
+ .circles li:nth-child(1){
+  left: 25%;
+  width: 80px;
+  height: 80px;
+  animation-delay: 0s;
+}
+
+
+.circles li:nth-child(2){
+  left: 10%;
+  width: 20px;
+  height: 20px;
+  animation-delay: 2s;
+  animation-duration: 12s;
+}
+
+.circles li:nth-child(3){
+  left: 70%;
+  width: 20px;
+  height: 20px;
+  animation-delay: 4s;
+}
+
+.circles li:nth-child(4){
+  left: 40%;
+  width: 60px;
+  height: 60px;
+  animation-delay: 0s;
+  animation-duration: 18s;
+}
+
+.circles li:nth-child(5){
+  left: 65%;
+  width: 20px;
+  height: 20px;
+  animation-delay: 0s;
+}
+
+.circles li:nth-child(6){
+  left: 75%;
+  width: 110px;
+  height: 110px;
+  animation-delay: 3s;
+}
+
+.circles li:nth-child(7){
+  left: 35%;
+  width: 150px;
+  height: 150px;
+  animation-delay: 7s;
+}
+
+.circles li:nth-child(8){
+  left: 50%;
+  width: 25px;
+  height: 25px;
+  animation-delay: 15s;
+  animation-duration: 45s;
+}
+
+.circles li:nth-child(9){
+  left: 20%;
+  width: 15px;
+  height: 15px;
+  animation-delay: 2s;
+  animation-duration: 35s;
+}
+
+.circles li:nth-child(10){
+  left: 85%;
+  width: 150px;
+  height: 150px;
+  animation-delay: 0s;
+  animation-duration: 11s;
+}
+
+
+
+@keyframes animate {
+
+  0%{
+      transform: translateY(0) rotate(0deg);
+      opacity: 1;
+      border-radius: 0;
+  }
+
+  100%{
+      transform: translateY(-1000px) rotate(720deg);
+      opacity: 0;
+      border-radius: 45%;
+  }
+
+}  */
